deployment.httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-httpd
  namespace: httpd
  labels:
    app: httpd
spec:
  replicas: 4
  selector:
    matchLabels:
      app: httpd

  template:
    metadata:
      labels:
        app: httpd

    spec:
      volumes:
      - name: document-root
        persistentVolumeClaim:
          claimName: pvc-httpd

      containers:
      - name: httpd
        image: httpd:2.4.51
        ports:
        - containerPort: 80

        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs/
          name: document-root

        livenessProbe:
          httpGet:
            path: /status.html
            port: 80
            scheme: HTTP

          initialDelaySeconds: 60
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: httpd
spec:
  selector:
    app: httpd
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
