ing.httpd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-httpd
  namespace: httpd
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: ricardo.intranet
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: httpd-service
            port:
              number: 80
